# linear-builder

./: .hlint.yaml  README.md  bench.hs  cabal.haskell-ci  changelog.md  fourmolu.yaml  linear-builder.cabal  text-builder-linear.cabal
.github/workflows/: check-prim-bounds.yml  fourmolu.yml  haskell-ci.yml  i386.yml
bench/: BenchAsciiChar.hs  BenchChar.hs  BenchDecimal.hs  BenchDecimalUnbounded.hs  BenchDouble.hs  BenchHexadecimal.hs  BenchText.hs  FindCrossover.hs  Main.hs  ParseCsv.hs
examples/: text-builder-linear-examples.cabal
examples/bench/: BenchUnicode.hs  Main.hs
examples/src/Examples/: Unicode.hs
examples/test/: Main.hs
src/Data/Text/Builder/: Linear.hs
src/Data/Text/Builder/Linear/: Array.hs  Buffer.hs  Char.hs  Core.hs  Dec.hs  Double.hs  Hex.hs  Internal.hs
src/Data/Text/Builder/Linear/Char/: ASCII.hs
src/Data/Text/Builder/Linear/Dec/: Bounded.hs  Unbounded.hs
test/: Main.hs
