cabal-version:      2.4
name:               linear-builder
version:            0.1
license: BSD-3-Clause
license-file: LICENSE
copyright: 2022 Andrew Lelechenko
maintainer: Andrew Lelechenko <andrew.lelechenko@gmail.com>
homepage: https://github.com/Bodigrim/linear-builder
category: Text
synopsis: Builder for Text based on linear types
description:
  Strict Text builder, which hides mutated buffer behind linear types
  and takes amortized linear time.
extra-source-files: changelog.md README.md
tested-with: GHC == 9.0.2, GHC == 9.2.1

source-repository head
  type: git
  location: git://github.com/Bodigrim/linear-builder.git

library
  build-depends:    base >= 4.15 && < 5, text >= 2.0
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -O2 -fexpose-all-unfoldings
  default-extensions:
    BangPatterns
    LinearTypes
    MagicHash
    UnboxedTuples
    UnicodeSyntax
  exposed-modules:
    Data.Text.Builder.Linear

test-suite linear-builder-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base,
    linear-builder,
    tasty,
    tasty-quickcheck,
    text
  default-extensions:
    BangPatterns
    LinearTypes
    MagicHash
    UnboxedTuples
    UnicodeSyntax
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts -N"

benchmark linear-builder-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  ghc-options: -O2 -rtsopts
  build-depends:
    base,
    linear-builder,
    tasty-bench >= 0.3,
    tasty-quickcheck,
    text
  default-extensions:
    BangPatterns
    LinearTypes
    MagicHash
    NumDecimals
    UnboxedTuples
    UnicodeSyntax
  default-language: Haskell2010
